# Flask-start

./: README  README.md  main.py  pyproject.toml
Docker/: docker-compose.yaml
flask_app/: __init__.py  app.py  models.py
flask_app/templates/: index.html  success.html
hello/: hello.py
